<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rohos Logon Key</string>
    <string name="hello_world">Open Rohos and click Setup Phone Authentication. This will display QR-code...</string>
    <string name="action_settings">Settings</string>


    <!-- Title for error message dialog when user attempts to scan a barcode but does not
         have the barcode scanner application installed. -->
    <string name="install_dialog_title">Install barcode scanner?</string>

    <!-- Error message displayed when user attempts to scan a barcode without a scanner app. -->
    <string name="install_dialog_message">
    To scan barcodes containing keys, you must install the ZXing barcode scanner.
   </string>

    <!-- Text on button user clicks to start installation of barcode scanning app -->
    <string name="install_button">Install</string>

    <!-- Button on manual account entry page, cancels adding account, returns to main page -->
    <string name="cancel">Cancel</string>

    <!-- Title for the error message dialog displayed after scanning invalid QR code -->
    <string name="error_title">Error</string>

    <!-- Alternative message displayed when scanned QR code is not recognized as valid key -->
    <string name="error_qr">Cannot interpret QR code.</string>

    <string name="scan_qrcode">Scan Rohos QR code</string>
    <string name="unlock_pc">2FA events</string>
    <string name="click_to_unlock">Touch the record to authenticate:</string>

    <string name="helpButton">How to use</string>
    <string name="help_use_1">1. Install Rohos Logon Key on your computer, click setup phone and then scan QR-code by the phone...</string>
    <string name="help_use_unlock">2. Now use your phone to unlock your computer or Rohos Disk</string>
    <string name="help_use_widget">3. Get push notifications with all important Computer authentication.</string>
    <string name="howitworks_page_title">How it works</string>

    <string name="remove">Remove</string>
    <string name="remove_account_title">Remove %1$s ?</string>
    <string name="remove_account_info">Please ensure you can login into computer %1$s by password before deleting this login item.</string>
    <string name="knock_recog_title">Set knock recognizing</string>
    <string name="action_check_updates">Check updates...</string>
    <string name="knock_recog_summ">Use knock recognizing to unlock PC</string>
    <string name="test_knock_title">Test knock recognizing</string>
    <string name="test_konck_summ">Tap to test knock recognizing</string>
    <string name="lock_if_leavs_conn_title">Lock PC when phone leaves WiFi network or Bluetooth connection</string>
    <string name="use_bluetooth_unlock_title">Use Bluetooth to unlock when possible</string>
    <string name="service_started">Service started</string>
    <string name="service_summ">Lock PC when leaves network</string>
    <string name="about_text">Version %1$s (c) Rohos.com</string>
    <string name="learn_more_btn">Learn more</string>
    <string name="number_knock_title">Number of knocks</string>
    <string name="number_knock_summ">Select number of knocks to unlock PC</string>
    <string name="unlock_on_table_title">Unlock as you put phone on the table</string>
    <string name="show_icon_on_tb_title">Show icon on toolbar</string>
    <string name="notifi_title">Click here to unlock computer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Firebase Messaging Service -->
    <string name="default_notification_channel_name">Weather</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
</resources>
